Update BTC forecast - 2025-02-14

--- a/BTC/index.html
+++ b/BTC/index.html
@@ -1,307 +1,338 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOL (Solana) Forecasts</title>
-    <style>
-        :root {
-            --primary-color: #2a2a2a;
-            --secondary-color: #4a90e2;
-            --background-color: #f5f5f5;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BTC (Bitcoin) Forecasts</title>
+  <style>
+    :root {
+      --primary-color: #2a2a2a;
+      --secondary-color: #4a90e2;
+      --background-color: #f5f5f5;
+    }
 
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: var(--background-color);
-            color: var(--primary-color);
-        }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: var(--background-color);
+      color: var(--primary-color);
+    }
 
-        .crypto-header {
-            background-color: var(--primary-color);
-            color: white;
-            padding: 2rem;
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-        }
+    .crypto-header {
+      background-color: var(--primary-color);
+      color: white;
+      padding: 2rem;
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
 
-        .crypto-symbol {
-            font-size: 2.5rem;
-            font-weight: bold;
-        }
+    .crypto-symbol {
+      font-size: 2.5rem;
+      font-weight: bold;
+    }
 
-        .crypto-name {
-            font-size: 1.5rem;
-            opacity: 0.9;
-        }
+    .crypto-name {
+      font-size: 1.5rem;
+      opacity: 0.9;
+    }
 
-        nav {
-            background-color: #333;
-            padding: 1rem;
-        }
+    nav {
+      background-color: #333;
+      padding: 1rem;
+    }
 
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 1rem;
-        }
+    nav ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
 
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
+    nav a {
+      color: white;
+      text-decoration: none;
+      padding: 0.5rem 1rem;
+      border-radius: 4px;
+      transition: background-color 0.3s;
+    }
 
-        nav a:hover {
-            background-color: var(--secondary-color);
-        }
+    nav a:hover {
+      background-color: var(--secondary-color);
+    }
 
-        main {
-            max-width: 1200px;
-            margin: 2rem auto;
-            padding: 0 1rem;
-        }
+    main {
+      max-width: 1200px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
 
-        .latest-forecast-card {
-            background: white;
-            border-radius: 8px;
-            padding: 2rem;
-            margin-bottom: 2rem;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
+    .latest-forecast-card {
+      background: white;
+      border-radius: 8px;
+      padding: 2rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
 
-        .forecast-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 1rem;
-        }
+    .forecast-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 1rem;
+    }
 
-        .forecast-date {
-            font-size: 1.2rem;
-            color: var(--secondary-color);
-        }
+    .forecast-date {
+      font-size: 1.2rem;
+      color: var(--secondary-color);
+    }
 
-        .metrics-dashboard {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1rem;
-            margin-bottom: 2rem;
-            background: white;
-            padding: 1.5rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
+    .metrics-dashboard {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1rem;
+      margin-bottom: 2rem;
+      background: white;
+      padding: 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
 
-        .metric {
-            text-align: center;
-            padding: 1rem;
-            background: #f8f9fa;
-            border-radius: 8px;
-            transition: transform 0.3s;
-        }
+    .metric {
+      text-align: center;
+      padding: 1rem;
+      background: #f8f9fa;
+      border-radius: 8px;
+      transition: transform 0.3s;
+    }
 
-        .metric:hover {
-            transform: translateY(-2px);
-        }
+    .metric:hover {
+      transform: translateY(-2px);
+    }
 
-        .metric-label {
-            font-size: 0.9rem;
-            color: #666;
-            margin-bottom: 0.5rem;
-        }
+    .metric-label {
+      font-size: 0.9rem;
+      color: #666;
+      margin-bottom: 0.5rem;
+    }
 
-        .metric-value {
-            font-size: 1.4rem;
-            font-weight: bold;
-            color: var(--secondary-color);
-        }
+    .metric-value {
+      font-size: 1.4rem;
+      font-weight: bold;
+      color: var(--secondary-color);
+    }
 
-        .forecast-gauge {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin: 1rem 0;
-            padding: 1.5rem;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
+    /* Updated Probability Gauge Styles */
+    .forecast-gauge {
+      margin: 1rem 0;
+    }
 
-        .probability-bar {
-            height: 24px;
-            background: #f0f0f0;
-            border-radius: 12px;
-            overflow: hidden;
-            flex-grow: 1;
-            margin: 0 1rem;
-        }
+    .labels {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 0.5rem;
+    }
 
-        .probability-fill {
-            height: 100%;
-            background: linear-gradient(90deg, #4CAF50, #2196F3);
-            width: var(--probability);
-            transition: width 1s ease-in-out;
-        }
+    .label {
+      font-size: 1rem;
+      font-weight: bold;
+    }
 
-        .key-levels {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 1rem;
-            padding: 1.5rem;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
+    /* Matching label colors */
+    .label.bearish-label { color: #ff4d4d; }
+    .label.neutral-label { color: #ffa500; }
+    .label.bullish-label { color: #4CAF50; }
 
-        .level {
-            text-align: center;
-            padding: 1rem;
-            background: #f8f9fa;
-            border-radius: 8px;
-            flex: 1;
-            margin: 0 0.5rem;
-            transition: transform 0.3s;
-        }
+    .probability-bar {
+      display: flex;
+      height: 24px;
+      background: #f0f0f0;
+      border-radius: 12px;
+      overflow: hidden;
+    }
 
-        .level:hover {
-            transform: translateY(-2px);
-        }
+    .segment {
+      height: 100%;
+    }
 
-        .level-label {
-            font-size: 0.9rem;
-            color: #666;
-            margin-bottom: 0.5rem;
-        }
+    .segment.bearish {
+      background-color: #ff4d4d; /* red for bearish */
+    }
 
-        .level-value {
-            font-size: 1.4rem;
-            font-weight: bold;
-            color: var(--secondary-color);
-        }
+    .segment.neutral {
+      background-color: #ffa500; /* vibrant orange for neutral */
+    }
 
-        .view-full-forecast {
-            display: inline-block;
-            margin-top: 1.5rem;
-            padding: 0.75rem 1.5rem;
-            background-color: var(--secondary-color);
-            color: white;
-            text-decoration: none;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
+    .segment.bullish {
+      background-color: #4CAF50; /* green for bullish */
+    }
 
-        .view-full-forecast:hover {
-            background-color: #357abd;
-        }
+    .probability-value {
+      font-size: 1rem;
+      font-weight: bold;
+      color: var(--secondary-color);
+      margin-top: 0.5rem;
+    }
 
-        footer {
-            background-color: var(--primary-color);
-            color: white;
-            text-align: center;
-            padding: 1rem;
-            margin-top: 2rem;
-        }
+    .key-levels {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 1rem;
+      padding: 1.5rem;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
 
-        @media (max-width: 768px) {
-            nav ul {
-                flex-direction: column;
-                align-items: center;
-            }
-            
-            .key-levels {
-                flex-direction: column;
-                gap: 1rem;
-            }
+    .level {
+      text-align: center;
+      padding: 1rem;
+      background: #f8f9fa;
+      border-radius: 8px;
+      flex: 1;
+      margin: 0 0.5rem;
+      transition: transform 0.3s;
+    }
 
-            .level {
-                margin: 0;
-            }
-        }
-    </style>
+    .level:hover {
+      transform: translateY(-2px);
+    }
+
+    .level-label {
+      font-size: 0.9rem;
+      color: #666;
+      margin-bottom: 0.5rem;
+    }
+
+    .level-value {
+      font-size: 1.4rem;
+      font-weight: bold;
+      color: var(--secondary-color);
+    }
+
+    .view-full-forecast {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 0.75rem 1.5rem;
+      background-color: var(--secondary-color);
+      color: white;
+      text-decoration: none;
+      border-radius: 4px;
+      transition: background-color 0.3s;
+    }
+
+    .view-full-forecast:hover {
+      background-color: #357abd;
+    }
+
+    footer {
+      background-color: var(--primary-color);
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+
+    @media (max-width: 768px) {
+      nav ul {
+        flex-direction: column;
+        align-items: center;
+      }
+      
+      .key-levels {
+        flex-direction: column;
+        gap: 1rem;
+      }
+
+      .level {
+        margin: 0;
+      }
+    }
+  </style>
 </head>
 <body>
-    <header class="crypto-header">
-        <div class="crypto-symbol">SOL</div>
-        <div class="crypto-name">Solana</div>
-    </header>
+  <header class="crypto-header">
+    <div class="crypto-symbol">BTC</div>
+    <div class="crypto-name">Bitcoin</div>
+  </header>
 
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../AVAX/index.html">AVAX</a></li>
-            <li><a href="../BNB/index.html">BNB</a></li>
-            <li><a href="../BTC/index.html">BTC</a></li>
-            <li><a href="../ETH/index.html">ETH</a></li>
-            <li><a href="../SOL/index.html">SOL</a></li>
-        </ul>
-    </nav>
+  <nav>
+    <ul>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="../AVAX/index.html">AVAX</a></li>
+      <li><a href="../BNB/index.html">BNB</a></li>
+      <li><a href="../BTC/index.html">BTC</a></li>
+      <li><a href="../ETH/index.html">ETH</a></li>
+      <li><a href="../SOL/index.html">SOL</a></li>
+    </ul>
+  </nav>
 
-    <main>
-        <div class="latest-forecast-card">
-            <div class="forecast-header">
-                <h2>Latest Forecast</h2>
-                <div class="forecast-date">February 12, 2025</div>
-            </div>
+  <main>
+    <div class="latest-forecast-card">
+      <div class="forecast-header">
+        <h2>Latest Forecast</h2>
+        <div class="forecast-date">2025-02-14</div>
+      </div>
 
-            <!-- Metrics Dashboard -->
-            <div class="metrics-dashboard">
-                <div class="metric">
-                    <div class="metric-label">Current Price</div>
-                    <div class="metric-value">$197.95</div>
-                </div>
-                <div class="metric">
-                    <div class="metric-label">21-Day Forecast</div>
-                    <div class="metric-value">$249.05</div>
-                </div>
-                <div class="metric">
-                    <div class="metric-label">Forecast Range</div>
-                    <div class="metric-value">$230.68 - $265.68</div>
-                </div>
-                <div class="metric">
-                    <div class="metric-label">Uncertainty</div>
-                    <div class="metric-value">±$35.01 (7.03%)</div>
-                </div>
-            </div>
-
-            <!-- Probability Gauge -->
-            <div class="forecast-gauge">
-                <span>Bearish (32.84%)</span>
-                <div class="probability-bar">
-                    <div class="probability-fill" style="--probability: 63.55%"></div>
-                </div>
-                <span>Bullish (63.55%)</span>
-            </div>
-
-            <!-- Key Levels -->
-            <div class="key-levels">
-                <div class="level">
-                    <div class="level-label">Support</div>
-                    <div class="level-value">$156.47</div>
-                </div>
-                <div class="level">
-                    <div class="level-label">Resistance</div>
-                    <div class="level-value">$262.95</div>
-                </div>
-            </div>
-
-            <a href="2025-02-12.html" class="view-full-forecast">View Full Forecast Analysis →</a>
+      <!-- Metrics Dashboard -->
+      <div class="metrics-dashboard">
+        <div class="metric">
+          <div class="metric-label">Current Price</div>
+          <div class="metric-value">$96632.78</div>
         </div>
+        <div class="metric">
+          <div class="metric-label">21-Day Forecast</div>
+          <div class="metric-value">$120355.43</div>
+        </div>
+        <div class="metric">
+          <div class="metric-label">Forecast Range</div>
+          <div class="metric-value">$114337.65 - $126373.20</div>
+        </div>
+        <div class="metric">
+          <div class="metric-label">Uncertainty</div>
+          <div class="metric-value">±24.55%</div>
+        </div>
+      </div>
 
-        <!-- Archive section could go here -->
-    </main>
+      <!-- Updated Probability Gauge with Neutral -->
+      <div class="forecast-gauge">
+        <div class="labels">
+          <span class="label bearish-label">Bearish (36.52%)</span>
+          <span class="label neutral-label">Neutral (${NEUTRAL_PROBABILITY}%)</span>
+          <span class="label bullish-label">Bullish (57.80%)</span>
+        </div>
+        <div class="probability-bar">
+          <div class="segment bearish" style="width: 36.52%;"></div>
+          <div class="segment neutral" style="width: ${NEUTRAL_PROBABILITY}%;"></div>
+          <div class="segment bullish" style="width: 57.80%;"></div>
+        </div>
+        <div class="probability-value">Overall Probability: 57.80%</div>
+      </div>
 
-    <footer>
-        <p>© 2025 Crypto Forecasts. All rights reserved.</p>
-    </footer>
+      <!-- Key Levels -->
+      <div class="key-levels">
+        <div class="level">
+          <div class="level-label">Support</div>
+          <div class="level-value">$81073.58</div>
+        </div>
+        <div class="level">
+          <div class="level-label">Resistance</div>
+          <div class="level-value">$111889.04</div>
+        </div>
+      </div>
+
+      <a href="2025-02-14.html" class="view-full-forecast">
+        View Full Forecast Analysis →
+      </a>
+    </div>
+  </main>
+
+  <footer>
+    <p>© 2025 Crypto Forecasts. All rights reserved.</p>
+  </footer>
 </body>
 </html>
