--- a/SOL/index.html
+++ b/SOL/index.html
@@ -126,56 +126,37 @@
       color: var(--secondary-color);
     }
 
-    /* Updated Probability Gauge Styles */
     .forecast-gauge {
-      margin: 1rem 0;
-    }
-
-    .labels {
       display: flex;
+      align-items: center;
       justify-content: space-between;
-      margin-bottom: 0.5rem;
+      margin: 1rem 0;
+      padding: 1.5rem;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
-
-    .label {
-      font-size: 1rem;
-      font-weight: bold;
-    }
-
-    /* Matching label colors */
-    .label.bearish-label { color: #ff4d4d; }
-    .label.neutral-label { color: #ffa500; }
-    .label.bullish-label { color: #4CAF50; }
 
     .probability-bar {
-      display: flex;
       height: 24px;
       background: #f0f0f0;
       border-radius: 12px;
       overflow: hidden;
+      flex-grow: 1;
+      margin: 0 1rem;
     }
 
-    .segment {
+    .probability-fill {
       height: 100%;
-    }
-
-    .segment.bearish {
-      background-color: #ff4d4d; /* red for bearish */
-    }
-
-    .segment.neutral {
-      background-color: #ffa500; /* vibrant orange for neutral */
-    }
-
-    .segment.bullish {
-      background-color: #4CAF50; /* green for bullish */
+      background: linear-gradient(90deg, #4CAF50, #2196F3);
+      width: var(--probability);
+      transition: width 1s ease-in-out;
     }
 
     .probability-value {
       font-size: 1rem;
       font-weight: bold;
       color: var(--secondary-color);
-      margin-top: 0.5rem;
     }
 
     .key-levels {
@@ -298,19 +279,14 @@
         </div>
       </div>
 
-      <!-- Updated Probability Gauge with Neutral -->
+      <!-- Probability Gauge -->
       <div class="forecast-gauge">
-        <div class="labels">
-          <span class="label bearish-label">Bearish (33.12%)</span>
-          <span class="label neutral-label">Neutral (${NEUTRAL_PROBABILITY}%)</span>
-          <span class="label bullish-label">Bullish (63.13%)</span>
-        </div>
+        <span>Bearish (32.71%)</span>
         <div class="probability-bar">
-          <div class="segment bearish" style="width: 33.12%;"></div>
-          <div class="segment neutral" style="width: ${NEUTRAL_PROBABILITY}%;"></div>
-          <div class="segment bullish" style="width: 63.13%;"></div>
+          <div class="probability-fill" style="--probability: 63.60%"></div>
         </div>
-        <div class="probability-value">Overall Probability: 63.13%</div>
+        <span>Bullish (63.60%)</span>
+        <div class="probability-value">63.60%</div>
       </div>
 
       <!-- Key Levels -->
