Update BTC forecast - 2025-02-14

--- a/BTC/index.html
+++ b/BTC/index.html
@@ -153,11 +153,7 @@
       transition: width 1s ease-in-out;
     }
 
-    .probability-value {
-      font-size: 1rem;
-      font-weight: bold;
-      color: var(--secondary-color);
-    }
+    /* Removed the extra overall probability text */
 
     .key-levels {
       display: flex;
@@ -281,12 +277,11 @@
 
       <!-- Probability Gauge -->
       <div class="forecast-gauge">
-        <span>Bearish (36.74%)</span>
+        <span>Bearish (36.44%)</span>
         <div class="probability-bar">
-          <div class="probability-fill" style="--probability: 57.48%"></div>
+          <div class="probability-fill" style="--probability: 57.73%"></div>
         </div>
-        <span>Bullish (57.48%)</span>
-        <div class="probability-value">57.48%</div>
+        <span>Bullish (57.73%)</span>
       </div>
 
       <!-- Key Levels -->
