Update ETH forecast - 2025-02-14

--- a/ETH/index.html
+++ b/ETH/index.html
@@ -153,11 +153,7 @@
       transition: width 1s ease-in-out;
     }
 
-    .probability-value {
-      font-size: 1rem;
-      font-weight: bold;
-      color: var(--secondary-color);
-    }
+    /* Removed the extra overall probability text */
 
     .key-levels {
       display: flex;
@@ -281,12 +277,11 @@
 
       <!-- Probability Gauge -->
       <div class="forecast-gauge">
-        <span>Bearish (38.75%)</span>
+        <span>Bearish (38.70%)</span>
         <div class="probability-bar">
-          <div class="probability-fill" style="--probability: 56.41%"></div>
+          <div class="probability-fill" style="--probability: 56.50%"></div>
         </div>
-        <span>Bullish (56.41%)</span>
-        <div class="probability-value">56.41%</div>
+        <span>Bullish (56.50%)</span>
       </div>
 
       <!-- Key Levels -->
