Update SOL forecast - 2025-02-14

--- a/SOL/index.html
+++ b/SOL/index.html
@@ -153,11 +153,7 @@
       transition: width 1s ease-in-out;
     }
 
-    .probability-value {
-      font-size: 1rem;
-      font-weight: bold;
-      color: var(--secondary-color);
-    }
+    /* Removed the extra overall probability text */
 
     .key-levels {
       display: flex;
@@ -281,12 +277,11 @@
 
       <!-- Probability Gauge -->
       <div class="forecast-gauge">
-        <span>Bearish (32.71%)</span>
+        <span>Bearish (33.00%)</span>
         <div class="probability-bar">
-          <div class="probability-fill" style="--probability: 63.60%"></div>
+          <div class="probability-fill" style="--probability: 63.25%"></div>
         </div>
-        <span>Bullish (63.60%)</span>
-        <div class="probability-value">63.60%</div>
+        <span>Bullish (63.25%)</span>
       </div>
 
       <!-- Key Levels -->
