Update AVAX forecast - 2025-02-14

--- a/AVAX/index.html
+++ b/AVAX/index.html
@@ -153,11 +153,7 @@
       transition: width 1s ease-in-out;
     }
 
-    .probability-value {
-      font-size: 1rem;
-      font-weight: bold;
-      color: var(--secondary-color);
-    }
+    /* Removed the extra overall probability text */
 
     .key-levels {
       display: flex;
@@ -281,12 +277,11 @@
 
       <!-- Probability Gauge -->
       <div class="forecast-gauge">
-        <span>Bearish (53.41%)</span>
+        <span>Bearish (53.29%)</span>
         <div class="probability-bar">
-          <div class="probability-fill" style="--probability: 43.25%"></div>
+          <div class="probability-fill" style="--probability: 43.31%"></div>
         </div>
-        <span>Bullish (43.25%)</span>
-        <div class="probability-value">43.25%</div>
+        <span>Bullish (43.31%)</span>
       </div>
 
       <!-- Key Levels -->
