Update BNB forecast - 2025-02-14

--- a/BNB/index.html
+++ b/BNB/index.html
@@ -153,11 +153,7 @@
       transition: width 1s ease-in-out;
     }
 
-    .probability-value {
-      font-size: 1rem;
-      font-weight: bold;
-      color: var(--secondary-color);
-    }
+    /* Removed the extra overall probability text */
 
     .key-levels {
       display: flex;
@@ -281,12 +277,11 @@
 
       <!-- Probability Gauge -->
       <div class="forecast-gauge">
-        <span>Bearish (29.03%)</span>
+        <span>Bearish (28.88%)</span>
         <div class="probability-bar">
-          <div class="probability-fill" style="--probability: 65.99%"></div>
+          <div class="probability-fill" style="--probability: 66.06%"></div>
         </div>
-        <span>Bullish (65.99%)</span>
-        <div class="probability-value">65.99%</div>
+        <span>Bullish (66.06%)</span>
       </div>
 
       <!-- Key Levels -->
