--- a/index.html
+++ b/index.html
@@ -47,5 +47,19 @@
   <footer>
     <p>© 1997–2025 CG Vibe Coder. Built by hand in Notepad.</p>
   </footer>
+  <div style="margin-top: 3em; font-family: monospace; color: #00FF00; text-align: center;">
+  <p>You are visitor number:</p>
+  <pre id="counter">Loading...</pre>
+</div>
+
+<script>
+  const fakeCount = Math.floor(1000 + Math.random() * 9000);
+  document.getElementById("counter").textContent = fakeCount.toLocaleString();
+</script>
+  <div style="text-align: center; margin-top: 2em;">
+  <img src="https://www.angelfire.lycos.com/images/best_site.gif" alt="Best Web Award" />
+  <p style="font-family: monospace; color: #00FF00;">Awarded Best Site on the Web (1997)</p>
+</div>
+
 </body>
 </html>
