--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
   document.getElementById("counter").textContent = fakeCount.toLocaleString();
 </script>
   <div style="text-align: center; margin-top: 2em;">
-  <img src="https://www.angelfire.lycos.com/images/best_site.gif" alt="Best Web Award" />
-  <p style="font-family: monospace; color: #00FF00;">Awarded Best Site on the Web (1997)</p>
+  <img src="https://cyber.dabamos.de/88x31/100hot2.gif" alt="100 HOT Site!" width="88" height="31" />
+  <p style="font-family: monospace; color: #00FF00;">We were hot... in 1998 🔥</p>
 </div>
-
 </body>
 </html>
